@@ -2,6 +2,8 @@ usbredir-0.5.3  7 October 2012
 ------------------------------
 -usbredirparser:
  -add support for bulk packets longer then 65535 bytes
+-usbredirhost:
+ -add support for bulk packets longer then 65535 bytes
 
 usbredir-0.5.2 25 September 2012
 --------------------------------
